RESOLVED FIXED189402
[Win][Clang] exceptionShouldTerminateProgram of StructuredExceptionHandlerSuppressor.cpp should take DWORD
https://bugs.webkit.org/show_bug.cgi?id=189402
Summary [Win][Clang] exceptionShouldTerminateProgram of StructuredExceptionHandlerSup...
Fujii Hironori
Reported 2018-09-07 03:19:36 PDT
[Win][Clang] exceptionShouldTerminateProgram of StructuredExceptionHandlerSuppressor.cpp should take DWORD While trying to build WebKit WinCairo port with the latest Clang (Bug 171618), the following compilation error is reported. > [3/664] Building CXX object Source\WebCore\CMakeFiles\WebCore.dir\platform\win\StructuredExceptionHandlerSuppressor.cpp.obj > FAILED: Source/WebCore/CMakeFiles/WebCore.dir/platform/win/StructuredExceptionHandlerSuppressor.cpp.obj > C:\tools\llvm\bin\clang-cl.exe /nologo -DBUILDING_WITH_CMAKE=1 -DBUILDING_WebCore -DHAVE_CONFIG_H=1 -DNOMINMAX -DSTATICALLY_LINKED_WITH_PAL=1 -DUCHAR_TYPE=wchar_t -DUNICODE -DWINVER=0x601 -DWTF_PLATFORM_WIN_CAIRO=1 -D_CRT_SECURE_NO_WARNINGS -D_HAS_EXCEPTIONS=0 -D_UNICODE -D_WIN32_WINNT=0x601 -D_WINDOWS -D_WINSOCKAPI_="" -D__STDC_CONSTANT_MACROS -I..\..\WebKitLibraries\win\include -I. -I..\..\Source\WebCore -I..\..\Source\WebCore\Modules\airplay -I..\..\Source\WebCore\Modules\beacon -I..\..\Source\WebCore\Modules\applepay -I..\..\Source\WebCore\Modules\applepay\paymentrequest -I..\..\Source\WebCore\Modules\cache -I..\..\Source\WebCore\Modules\credentialmanagement -I..\..\Source\WebCore\Modules\encryptedmedia -I..\..\Source\WebCore\Modules\encryptedmedia\legacy -I..\..\Source\WebCore\Modules\entriesapi -I..\..\Source\WebCore\Modules\fetch -I..\..\Source\WebCore\Modules\geolocation -I..\..\Source\WebCore\Modules\indexeddb -I..\..\Source\WebCore\Modules\indexeddb\client -I..\..\Source\WebCore\Modules\indexeddb\server -I..\..\Source\WebCore\Modules\indexeddb\shared -I..\..\Source\WebCore\Modules\mediacapabilities -I..\..\Source\WebCore\Modules\mediacontrols -I..\..\Source\WebCore\Modules\mediasession -I..\..\Source\WebCore\Modules\mediasource -I..\..\Source\WebCore\Modules\mediastream -I..\..\Source\WebCore\Modules\navigatorcontentutils -I..\..\Source\WebCore\Modules\notifications -I..\..\Source\WebCore\Modules\paymentrequest -I..\..\Source\WebCore\Modules\plugins -I..\..\Source\WebCore\Modules\quota -I..\..\Source\WebCore\Modules\speech -I..\..\Source\WebCore\Modules\streams -I..\..\Source\WebCore\Modules\webaudio -I..\..\Source\WebCore\Modules\webauthn -I..\..\Source\WebCore\Modules\webdatabase -I..\..\Source\WebCore\Modules\webdriver -I..\..\Source\WebCore\Modules\websockets -I..\..\Source\WebCore\Modules\webvr -I..\..\Source\WebCore\accessibility -I..\..\Source\WebCore\animation -I..\..\Source\WebCore\bindings -I..\..\Source\WebCore\bindings\js -I..\..\Source\WebCore\bridge -I..\..\Source\WebCore\bridge\c -I..\..\Source\WebCore\bridge\jsc -I..\..\Source\WebCore\contentextensions -I..\..\Source\WebCore\crypto -I..\..\Source\WebCore\crypto\algorithms -I..\..\Source\WebCore\crypto\keys -I..\..\Source\WebCore\crypto\parameters -I..\..\Source\WebCore\css -I..\..\Source\WebCore\css\parser -I..\..\Source\WebCore\cssjit -I..\..\Source\WebCore\dom -I..\..\Source\WebCore\dom\default -I..\..\Source\WebCore\dom\messageports -I..\..\Source\WebCore\domjit -I..\..\Source\WebCore\editing -I..\..\Source\WebCore\fileapi -I..\..\Source\WebCore\history -I..\..\Source\WebCore\html -I..\..\Source\WebCore\html\canvas -I..\..\Source\WebCore\html\forms -I..\..\Source\WebCore\html\parser -I..\..\Source\WebCore\html\shadow -I..\..\Source\WebCore\html\track -I..\..\Source\WebCore\inspector -I..\..\Source\WebCore\inspector\agents -I..\..\Source\WebCore\inspector\agents\page -I..\..\Source\WebCore\inspector\agents\worker -I..\..\Source\WebCore\loader -I..\..\Source\WebCore\loader\appcache -I..\..\Source\WebCore\loader\archive -I..\..\Source\WebCore\loader\archive\mhtml -I..\..\Source\WebCore\loader\cache -I..\..\Source\WebCore\loader\icon -I..\..\Source\WebCore\mathml -I..\..\Source\WebCore\page -I..\..\Source\WebCore\page\animation -I..\..\Source\WebCore\page\csp -I..\..\Source\WebCore\page\scrolling -I..\..\Source\WebCore\platform -I..\..\Source\WebCore\platform\animation -I..\..\Source\WebCore\platform\audio -I..\..\Source\WebCore\platform\crypto -I..\..\Source\WebCore\platform\encryptedmedia -I..\..\Source\WebCore\platform\gamepad -I..\..\Source\WebCore\platform\graphics -I..\..\Source\WebCore\platform\graphics\cpu\arm -I..\..\Source\WebCore\platform\graphics\cpu\arm\filters -I..\..\Source\WebCore\platform\graphics\displaylists -I..\..\Source\WebCore\platform\graphics\filters -I..\..\Source\WebCore\platform\graphics\harfbuzz -I..\..\Source\WebCore\platform\graphics\harfbuzz\ng -I..\..\Source\WebCore\platform\graphics\iso -I..\..\Source\WebCore\platform\graphics\opentype -I..\..\Source\WebCore\platform\graphics\transforms -I..\..\Source\WebCore\platform\mediastream -I..\..\Source\WebCore\platform\mediastream\libwebrtc -I..\..\Source\WebCore\platform\mock -I..\..\Source\WebCore\platform\mock\mediasource -I..\..\Source\WebCore\platform\network -I..\..\Source\WebCore\platform\sql -I..\..\Source\WebCore\platform\text -I..\..\Source\WebCore\platform\text\icu -I..\..\Source\WebCore\platform\vr -I..\..\Source\WebCore\plugins -I..\..\Source\WebCore\rendering -I..\..\Source\WebCore\rendering\line -I..\..\Source\WebCore\rendering\mathml -I..\..\Source\WebCore\rendering\shapes -I..\..\Source\WebCore\rendering\style -I..\..\Source\WebCore\rendering\svg -I..\..\Source\WebCore\rendering\updating -I..\..\Source\WebCore\replay -I..\..\Source\WebCore\storage -I..\..\Source\WebCore\style -I..\..\Source\WebCore\svg -I..\..\Source\WebCore\svg\animation -I..\..\Source\WebCore\svg\graphics -I..\..\Source\WebCore\svg\graphics\filters -I..\..\Source\WebCore\svg\properties -I..\..\Source\WebCore\websockets -I..\..\Source\WebCore\workers -I..\..\Source\WebCore\workers\service -I..\..\Source\WebCore\workers\service\context -I..\..\Source\WebCore\workers\service\server -I..\..\Source\WebCore\xml -I..\..\Source\WebCore\xml\parser -IDerivedSources\WebCore -IDerivedSources\ForwardingHeaders\ANGLE -I..\..\Source\WebCore\platform\graphics\gpu -IDerivedSources\ForwardingHeaders -I..\include\private -I..\include\private\JavaScriptCore -I..\..\Source\WebCore\accessibility\win -I..\..\Source\WebCore\page\win -I..\..\Source\WebCore\platform\graphics\egl -I..\..\Source\WebCore\platform\graphics\opengl -I..\..\Source\WebCore\platform\graphics\win -I..\..\Source\WebCore\platform\mediacapabilities -I..\..\Source\WebCore\platform\network\win -I..\..\Source\WebCore\platform\win -I..\..\Source\ThirdParty\ANGLE\include -I..\..\Source\ThirdParty\ANGLE\include\egl -I..\..\Source\WebCore\platform\cf -I..\..\Source\WebCore\platform\cf\win -I..\..\Source\WebCore\platform\graphics\cairo -I..\..\Source\WebCore\platform\network\curl -I..\..\Source\WebCore\platform\image-decoders -I..\..\Source\WebCore\platform\image-decoders\bmp -I..\..\Source\WebCore\platform\image-decoders\gif -I..\..\Source\WebCore\platform\image-decoders\ico -I..\..\Source\WebCore\platform\image-decoders\jpeg -I..\..\Source\WebCore\platform\image-decoders\png -I..\..\Source\WebCore\platform\image-decoders\webp -I..\..\Source\WebCore\platform\graphics\texmap -I..\..\Source\WebCore\loader\archive\cf -I..\..\WebKitLibraries\win\include\cairo -I..\..\Source\bmalloc -IDerivedSources -I..\..\Source\ThirdParty -fdiagnostics-color=always -fcolor-diagnostics -Wno-parentheses-equality -Wno-noexcept-type -Qunused-arguments -Wno-unknown-argument -Wno-nonportable-include-path -Wno-unknown-pragmas -Wno-macro-redefined -Wno-undef -m64 -fno-strict-aliasing /MD /Zi /Ob0 /Od /RTC1 /bigobj /wd4018 /wd4068 /wd4099 /wd4100 /wd4127 /wd4138 /wd4146 /wd4180 /wd4189 /wd4201 /wd4206 /wd4244 /wd4251 /wd4267 /wd4275 /wd4288 /wd4291 /wd4305 /wd4309 /wd4344 /wd4355 /wd4389 /wd4396 /wd4456 /wd4457 /wd4458 /wd4459 /wd4481 /wd4503 /wd4505 /wd4510 /wd4512 /wd4530 /wd4610 /wd4611 /wd4646 /wd4702 /wd4706 /wd4722 /wd4800 /wd4819 /wd4951 /wd4952 /wd4996 /wd6011 /wd6031 /wd6211 /wd6246 /wd6255 /wd6387 /Zi /GS /EHa- /EHc- /EHs- /fp:except- /analyze- /bigobj /std:c++17 /utf-8 /validate-charset -fmsc-version=1911 /Yu"WebCorePrefix.h" /FI"WebCorePrefix.h" /Fp"C:/webkit/ga/WebKitBuild/Debug/Source/WebCore/WebCore_SOURCES/WebCorePrefix.pch" /showIncludes /FoSource\WebCore\CMakeFiles\WebCore.dir\platform\win\StructuredExceptionHandlerSuppressor.cpp.obj /Fdlib64\WebCore.pdb -c ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(38,10): error: case value evaluates to 2147483650, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_DATATYPE_MISALIGNMENT: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(390,45): note: expanded from macro 'EXCEPTION_DATATYPE_MISALIGNMENT' > #define EXCEPTION_DATATYPE_MISALIGNMENT STATUS_DATATYPE_MISALIGNMENT > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2466,42): note: expanded from macro 'STATUS_DATATYPE_MISALIGNMENT' > #define STATUS_DATATYPE_MISALIGNMENT ((DWORD )0x80000002L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(39,10): error: case value evaluates to 3221225613, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_DENORMAL_OPERAND: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(394,45): note: expanded from macro 'EXCEPTION_FLT_DENORMAL_OPERAND' > #define EXCEPTION_FLT_DENORMAL_OPERAND STATUS_FLOAT_DENORMAL_OPERAND > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2481,42): note: expanded from macro 'STATUS_FLOAT_DENORMAL_OPERAND' > #define STATUS_FLOAT_DENORMAL_OPERAND ((DWORD )0xC000008DL) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(40,10): error: case value evaluates to 3221225614, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_DIVIDE_BY_ZERO: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(395,45): note: expanded from macro 'EXCEPTION_FLT_DIVIDE_BY_ZERO' > #define EXCEPTION_FLT_DIVIDE_BY_ZERO STATUS_FLOAT_DIVIDE_BY_ZERO > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2482,42): note: expanded from macro 'STATUS_FLOAT_DIVIDE_BY_ZERO' > #define STATUS_FLOAT_DIVIDE_BY_ZERO ((DWORD )0xC000008EL) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(41,10): error: case value evaluates to 3221225615, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_INEXACT_RESULT: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(396,45): note: expanded from macro 'EXCEPTION_FLT_INEXACT_RESULT' > #define EXCEPTION_FLT_INEXACT_RESULT STATUS_FLOAT_INEXACT_RESULT > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2483,42): note: expanded from macro 'STATUS_FLOAT_INEXACT_RESULT' > #define STATUS_FLOAT_INEXACT_RESULT ((DWORD )0xC000008FL) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(42,10): error: case value evaluates to 3221225616, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_INVALID_OPERATION: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(397,45): note: expanded from macro 'EXCEPTION_FLT_INVALID_OPERATION' > #define EXCEPTION_FLT_INVALID_OPERATION STATUS_FLOAT_INVALID_OPERATION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2484,42): note: expanded from macro 'STATUS_FLOAT_INVALID_OPERATION' > #define STATUS_FLOAT_INVALID_OPERATION ((DWORD )0xC0000090L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(43,10): error: case value evaluates to 3221225617, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_OVERFLOW: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(398,45): note: expanded from macro 'EXCEPTION_FLT_OVERFLOW' > #define EXCEPTION_FLT_OVERFLOW STATUS_FLOAT_OVERFLOW > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2485,42): note: expanded from macro 'STATUS_FLOAT_OVERFLOW' > #define STATUS_FLOAT_OVERFLOW ((DWORD )0xC0000091L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(44,10): error: case value evaluates to 3221225618, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_STACK_CHECK: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(399,45): note: expanded from macro 'EXCEPTION_FLT_STACK_CHECK' > #define EXCEPTION_FLT_STACK_CHECK STATUS_FLOAT_STACK_CHECK > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2486,42): note: expanded from macro 'STATUS_FLOAT_STACK_CHECK' > #define STATUS_FLOAT_STACK_CHECK ((DWORD )0xC0000092L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(45,10): error: case value evaluates to 3221225619, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_FLT_UNDERFLOW: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(400,45): note: expanded from macro 'EXCEPTION_FLT_UNDERFLOW' > #define EXCEPTION_FLT_UNDERFLOW STATUS_FLOAT_UNDERFLOW > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2487,42): note: expanded from macro 'STATUS_FLOAT_UNDERFLOW' > #define STATUS_FLOAT_UNDERFLOW ((DWORD )0xC0000093L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(47,10): error: case value evaluates to 3221225477, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_ACCESS_VIOLATION: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(389,45): note: expanded from macro 'EXCEPTION_ACCESS_VIOLATION' > #define EXCEPTION_ACCESS_VIOLATION STATUS_ACCESS_VIOLATION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2472,42): note: expanded from macro 'STATUS_ACCESS_VIOLATION' > #define STATUS_ACCESS_VIOLATION ((DWORD )0xC0000005L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(48,10): error: case value evaluates to 3221225612, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_ARRAY_BOUNDS_EXCEEDED: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(393,45): note: expanded from macro 'EXCEPTION_ARRAY_BOUNDS_EXCEEDED' > #define EXCEPTION_ARRAY_BOUNDS_EXCEEDED STATUS_ARRAY_BOUNDS_EXCEEDED > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2480,42): note: expanded from macro 'STATUS_ARRAY_BOUNDS_EXCEEDED' > #define STATUS_ARRAY_BOUNDS_EXCEEDED ((DWORD )0xC000008CL) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(49,10): error: case value evaluates to 3221225620, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_INT_DIVIDE_BY_ZERO: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(401,45): note: expanded from macro 'EXCEPTION_INT_DIVIDE_BY_ZERO' > #define EXCEPTION_INT_DIVIDE_BY_ZERO STATUS_INTEGER_DIVIDE_BY_ZERO > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2488,42): note: expanded from macro 'STATUS_INTEGER_DIVIDE_BY_ZERO' > #define STATUS_INTEGER_DIVIDE_BY_ZERO ((DWORD )0xC0000094L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(50,10): error: case value evaluates to 3221225621, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_INT_OVERFLOW: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(402,45): note: expanded from macro 'EXCEPTION_INT_OVERFLOW' > #define EXCEPTION_INT_OVERFLOW STATUS_INTEGER_OVERFLOW > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2489,42): note: expanded from macro 'STATUS_INTEGER_OVERFLOW' > #define STATUS_INTEGER_OVERFLOW ((DWORD )0xC0000095L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(51,10): error: case value evaluates to 3221225622, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_PRIV_INSTRUCTION: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(403,45): note: expanded from macro 'EXCEPTION_PRIV_INSTRUCTION' > #define EXCEPTION_PRIV_INSTRUCTION STATUS_PRIVILEGED_INSTRUCTION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2490,42): note: expanded from macro 'STATUS_PRIVILEGED_INSTRUCTION' > #define STATUS_PRIVILEGED_INSTRUCTION ((DWORD )0xC0000096L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(52,10): error: case value evaluates to 3221225478, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_IN_PAGE_ERROR: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(404,45): note: expanded from macro 'EXCEPTION_IN_PAGE_ERROR' > #define EXCEPTION_IN_PAGE_ERROR STATUS_IN_PAGE_ERROR > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2473,42): note: expanded from macro 'STATUS_IN_PAGE_ERROR' > #define STATUS_IN_PAGE_ERROR ((DWORD )0xC0000006L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(53,10): error: case value evaluates to 3221225501, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_ILLEGAL_INSTRUCTION: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(405,45): note: expanded from macro 'EXCEPTION_ILLEGAL_INSTRUCTION' > #define EXCEPTION_ILLEGAL_INSTRUCTION STATUS_ILLEGAL_INSTRUCTION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2477,42): note: expanded from macro 'STATUS_ILLEGAL_INSTRUCTION' > #define STATUS_ILLEGAL_INSTRUCTION ((DWORD )0xC000001DL) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(54,10): error: case value evaluates to 3221225509, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_NONCONTINUABLE_EXCEPTION: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(406,45): note: expanded from macro 'EXCEPTION_NONCONTINUABLE_EXCEPTION' > #define EXCEPTION_NONCONTINUABLE_EXCEPTION STATUS_NONCONTINUABLE_EXCEPTION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2478,42): note: expanded from macro 'STATUS_NONCONTINUABLE_EXCEPTION' > #define STATUS_NONCONTINUABLE_EXCEPTION ((DWORD )0xC0000025L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(55,10): error: case value evaluates to 3221225725, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_STACK_OVERFLOW: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(407,45): note: expanded from macro 'EXCEPTION_STACK_OVERFLOW' > #define EXCEPTION_STACK_OVERFLOW STATUS_STACK_OVERFLOW > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2491,42): note: expanded from macro 'STATUS_STACK_OVERFLOW' > #define STATUS_STACK_OVERFLOW ((DWORD )0xC00000FDL) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(56,10): error: case value evaluates to 3221225510, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_INVALID_DISPOSITION: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(408,45): note: expanded from macro 'EXCEPTION_INVALID_DISPOSITION' > #define EXCEPTION_INVALID_DISPOSITION STATUS_INVALID_DISPOSITION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2479,42): note: expanded from macro 'STATUS_INVALID_DISPOSITION' > #define STATUS_INVALID_DISPOSITION ((DWORD )0xC0000026L) > ^ > ..\..\Source\WebCore\platform\win\StructuredExceptionHandlerSuppressor.cpp(57,10): error: case value evaluates to 2147483649, which cannot be narrowed to type 'int' [-Wc++11-narrowing] > case EXCEPTION_GUARD_PAGE: > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\minwinbase.h(409,45): note: expanded from macro 'EXCEPTION_GUARD_PAGE' > #define EXCEPTION_GUARD_PAGE STATUS_GUARD_PAGE_VIOLATION > ^ > C:\Program Files (x86)\Windows Kits\10\include\10.0.17134.0\um\winnt.h(2465,42): note: expanded from macro 'STATUS_GUARD_PAGE_VIOLATION' > #define STATUS_GUARD_PAGE_VIOLATION ((DWORD )0x80000001L) > ^ > fatal error: too many errors emitted, stopping now [-ferror-limit=] > 20 errors generated.
Attachments
Patch (1.76 KB, patch)
2018-09-07 03:29 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2018-09-07 03:29:44 PDT
Don Olmstead
Comment 2 2018-09-07 08:42:11 PDT
This is fine. Clang seems to be a lot stricter in terms of implicit conversions compared to MSVC so this is necessary.
WebKit Commit Bot
Comment 3 2018-09-07 17:41:21 PDT
Comment on attachment 349135 [details] Patch Clearing flags on attachment: 349135 Committed r235825: <https://trac.webkit.org/changeset/235825>
WebKit Commit Bot
Comment 4 2018-09-07 17:41:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-09-07 17:42:21 PDT
Note You need to log in before you can comment on or make changes to this bug.