[Win][Clang] exceptionShouldTerminateProgram of StructuredExceptionHandlerSuppressor.cpp should take DWORD https://bugs.webkit.org/show_bug.cgi?id=189402

Reviewed by Alex Christensen.

Clang reports compilation errors like following:

> StructuredExceptionHandlerSuppressor.cpp(38,10):  error: case value evaluates to 2147483650, which cannot be narrowed to type 'int' [-Wc++11-narrowing]
>     case EXCEPTION_DATATYPE_MISALIGNMENT:
>          ^

No new tests (no behavioral change).

* platform/win/StructuredExceptionHandlerSuppressor.cpp:
(exceptionShouldTerminateProgram): Changed the type of argument from int to DWORD.


Canonical link: https://commits.webkit.org/204412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235825 268f45cc-cd09-0410-ab3c-d52691b4dbfc